--- a/index.html
+++ b/index.html
@@ -1,15 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
+    <title>Meu Portfólio de Projetos</title>
+    <style>
+        
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .projeto {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            background-color: #fff;
+        }
+
+        .projeto h3 a {
+            color: #007bff;
+            text-decoration: none;
+        }
+
+        .projeto h3 a:hover {
+            text-decoration: underline;
+        }
+
+        .projeto p {
+            margin-top: 5px;
+            color: #666;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #333;
+            color: #fff;
+            margin-top: 20px;
+        }
+    </style>
 </head>
-
 <body>
-    <h1>Portfólio</h1>
-    <h1>Portfólio</h1>
-</body>
 
+    <header>
+        <h1>Mariana Aguiar</h1>
+        <p>Meu Portfólio de Projetos GitHub</p>
+    </header>
+
+    <div class="container">
+        <h2>Meus Projetos</h2>
+
+        <div class="projeto">
+            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Lista%20exerc%C3%ADcios" target="_blank">Nome do Projeto 1</a></h3>
+            <p>Uma breve descrição do Projeto 1. Explique o que ele faz e quais tecnologias foram usadas (Ex: Python, JavaScript, etc.).</p>
+            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+        </div>
+        <div class="projeto">
+            <h3><a href="[LINK COMPLETO DO REPOSITÓRIO 2 NO GITHUB]" target="_blank">Nome do Projeto 2</a></h3>
+            <p>Uma breve descrição do Projeto 2. Explique o que ele faz e quais tecnologias foram usadas.</p>
+            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+        </div>
+        <div class="projeto">
+            <h3><a href="[LINK COMPLETO DO REPOSITÓRIO 3 NO GITHUB]" target="_blank">Nome do Projeto 3</a></h3>
+            <p>Uma breve descrição do Projeto 3. Explique o que ele faz e quais tecnologias foram usadas.</p>
+            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+        </div>
+        <p>Você pode ver mais sobre mim e outros repositórios no meu <a href="[LINK DO SEU PERFIL GITHUB]" target="_blank">Perfil do GitHub</a>.</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 [Seu Nome Aqui]. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
 </html>
