--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <header>
         <h1>Mariana Aguiar</h1>
+        <h2>Atualmente estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, cursando o Ensino Médio Integrado ao Técnico em Informática.</h2>
         <p>Meu Portfólio de Projetos GitHub</p>
     </header>
 
@@ -75,26 +76,22 @@
         <h2>Meus Projetos</h2>
 
         <div class="projeto">
-            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Lista%20exerc%C3%ADcios" target="_blank">Nome do Projeto 1</a></h3>
-            <p>Uma breve descrição do Projeto 1. Explique o que ele faz e quais tecnologias foram usadas (Ex: Python, JavaScript, etc.).</p>
-            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Lista%20exerc%C3%ADcios" target="_blank">Lista de Exercícios</a></h3>
+            <p>Lista de exercícios React</p>
+            <p><strong>Status:</strong> Concluído</p>
         </div>
         <div class="projeto">
-            <h3><a href="[LINK COMPLETO DO REPOSITÓRIO 2 NO GITHUB]" target="_blank">Nome do Projeto 2</a></h3>
-            <p>Uma breve descrição do Projeto 2. Explique o que ele faz e quais tecnologias foram usadas.</p>
-            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Checkpoints" target="_blank">Checkpoints</a></h3>
+            <p>Desafios react para avaliar o aprendizado.</p>
+            <p><strong>Status:</strong> Concluído</p>
         </div>
         <div class="projeto">
-            <h3><a href="[LINK COMPLETO DO REPOSITÓRIO 3 NO GITHUB]" target="_blank">Nome do Projeto 3</a></h3>
-            <p>Uma breve descrição do Projeto 3. Explique o que ele faz e quais tecnologias foram usadas.</p>
-            <p><strong>Status:</strong> Concluído / Em Andamento</p>
+            <h3><a href="https://github.com/marianaaguiarm/jogo-real-oficial.git" target="_blank">Jogo</a></h3>
+            <p>Jogo desenvolvido em sala de aula para introduzir o mundo dos games</p>
+            <p><strong>Status:</strong>Em andamento</p>
         </div>
-        <p>Você pode ver mais sobre mim e outros repositórios no meu <a href="[LINK DO SEU PERFIL GITHUB]" target="_blank">Perfil do GitHub</a>.</p>
+        <p>Para mais, acesse aqui: <a href="https://github.com/marianaaguiarm" target="_blank">Perfil do GitHub</a>.</p>
     </div>
-
-    <footer>
-        <p>&copy; 2025 [Seu Nome Aqui]. Todos os direitos reservados.</p>
-    </footer>
 
 </body>
 </html>
