--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #fac4ea;
             color: #333;
         }
 
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #ff7ad3;
+            color: #5e074f;
             padding: 20px 0;
             text-align: center;
         }
@@ -42,7 +42,7 @@
         }
 
         .projeto h3 a {
-            color: #007bff;
+            color: #7c0e92;
             text-decoration: none;
         }
 
@@ -68,7 +68,8 @@
 
     <header>
         <h1>Mariana Aguiar</h1>
-        <h2>Atualmente estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, cursando o Ensino Médio Integrado ao Técnico em Informática.</h2>
+        <h3>Atualmente Estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, 
+            cursando o Ensino Médio Integrado ao Técnico em Informática.</h3>
         <p>Meu Portfólio de Projetos GitHub</p>
     </header>
 
@@ -88,7 +89,7 @@
         <div class="projeto">
             <h3><a href="https://github.com/marianaaguiarm/jogo-real-oficial.git" target="_blank">Jogo</a></h3>
             <p>Jogo desenvolvido em sala de aula para introduzir o mundo dos games</p>
-            <p><strong>Status:</strong>Em andamento</p>
+            <p><strong>Status:</strong> Em andamento</p>
         </div>
         <p>Para mais, acesse aqui: <a href="https://github.com/marianaaguiarm" target="_blank">Perfil do GitHub</a>.</p>
     </div>
