--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #fac4ea;
+            background-color: #fdd1e2;
             color: #333;
         }
 
         header {
-            background-color: #ff7ad3;
+            background-color: #ffb4da;
             color: #5e074f;
             padding: 20px 0;
             text-align: center;
@@ -23,6 +23,12 @@
 
         header h1 {
             margin: 0;
+            color: #5e074f;
+        }
+
+         header h3 {
+            margin: 0;
+            color: #5e074f;
         }
 
         .container {
@@ -30,11 +36,11 @@
             margin: 20px auto;
             padding: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(136, 16, 82, 0.1);
         }
 
         .projeto {
-            border: 1px solid #ddd;
+            border: 1px solid #dddddd;
             padding: 15px;
             margin-bottom: 15px;
             border-radius: 5px;
@@ -48,6 +54,7 @@
 
         .projeto h3 a:hover {
             text-decoration: underline;
+            color: #7c0e92;
         }
 
         .projeto p {
@@ -55,13 +62,7 @@
             color: #666;
         }
 
-        footer {
-            text-align: center;
-            padding: 10px 0;
-            background-color: #333;
-            color: #fff;
-            margin-top: 20px;
-        }
+   
     </style>
 </head>
 <body>
