--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
             color: #5e074f;
         }
 
-         header h3 {
-            margin: 0;
-            color: #5e074f;
-        }
-
         .container {
             width: 80%;
             margin: 20px auto;
@@ -69,8 +64,8 @@
 
     <header>
         <h1>Mariana Aguiar</h1>
-        <h3>Atualmente Estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, 
-            cursando o Ensino Médio Integrado ao Técnico em Informática.</h3>
+        <p>Atualmente Estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, <br> 
+            cursando o Ensino Médio Integrado ao Técnico em Informática.</p>
         <p>Meu Portfólio de Projetos GitHub</p>
     </header>
 
