--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio de Projetos</title>
     <style>
-        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -56,15 +56,14 @@
             margin-top: 5px;
             color: #666;
         }
-
-   
     </style>
 </head>
+
 <body>
 
     <header>
         <h1>Mariana Aguiar</h1>
-        <p>Atualmente Estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, <br> 
+        <p>Atualmente Estudante do Instituto Federal do Rio de Janeiro - Campus Niterói, <br>
             cursando o Ensino Médio Integrado ao Técnico em Informática.</p>
         <p>Meu Portfólio de Projetos GitHub</p>
     </header>
@@ -73,12 +72,14 @@
         <h2>Meus Projetos</h2>
 
         <div class="projeto">
-            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Lista%20exerc%C3%ADcios" target="_blank">Lista de Exercícios</a></h3>
+            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Lista%20exerc%C3%ADcios"
+                    target="_blank">Lista de Exercícios</a></h3>
             <p>Lista de exercícios React</p>
             <p><strong>Status:</strong> Concluído</p>
         </div>
         <div class="projeto">
-            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/a6fae46d4b4ef3f5f63d7a6b45b8533970bf94d3/Checkpoints" target="_blank">Checkpoints</a></h3>
+            <h3><a href="https://github.com/marianaaguiarm/portfolio/tree/f773905f16287309d424f7078b4d4a70da1bceea/Checkpoints"
+                    target="_blank">Checkpoints</a></h3>
             <p>Desafios react para avaliar o aprendizado.</p>
             <p><strong>Status:</strong> Concluído</p>
         </div>
@@ -91,4 +92,5 @@
     </div>
 
 </body>
+
 </html>
